update church website

--- a/html/About us.html
+++ b/html/About us.html
@@ -3,7 +3,7 @@
 
 <head>
     <title> St. Joseph Mukasa Catholic Church Kahawa West</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body class="about">
@@ -16,7 +16,7 @@
         <li><a href="Group and Jumuias.html">Groups and Jumuias</a> </li>
     </ul>
     <h1> St. Joseph Mukasa Catholic Church Kahawa West</h1>
-    <img src="subukia4.jpg" alt="Tuthu" width="100%" height="500px">
+    <img src="../images/subukia4.jpg" alt="Tuthu" width="100%" height="500px">
     <p class="m13">
         The Kenya Conference of Catholic Bishops, a permanent institution, is the assembly of the <br>
         Catholic Bishops in Kenya united and exercising together their Pastoral offices over Christ’s <br>
@@ -69,11 +69,11 @@
     </div>
     <div class="m12">
         <p>
-            <img src="muragu1.jpg" alt="Muragu" width="400px" height="300px">
+            <img src="../images/muragu1.jpg" alt="Muragu" width="400px" height="300px">
             <p>Fr. John </p> <br>
-            <img src="thomas.jpeg" alt="Thomas" height="400px" width="400px">
+            <img src="../images/thomas.jpeg" alt="Thomas" height="400px" width="400px">
             <p>Fr. Thomas </p> <br>
-            <img src="joseph.jpeg" alt="Joseph" width="400px" height="400px">
+            <img src="../images/joseph.jpeg" alt="Joseph" width="400px" height="400px">
             <p> Fr. Joseph </p> <br>
         </p>
     </div><br><br><br><br>
