--- a/html/Contact Us.html
+++ b/html/Contact Us.html
@@ -3,7 +3,7 @@
 
 <head>
     <title> St. Joseph Mukasa Catholic Church Kahawa West</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body class="contact">
@@ -18,7 +18,7 @@
     </ul>
 
     <h1> St. Joseph Mukasa Catholic Church Kahawa West</h1>
-    <img src="church.jpg" alt="Tuthu" width="100%" height="700px">
+    <img src="../images/church.jpg" alt="Tuthu" width="100%" height="700px">
     <P>
         <h5> Contacts <br></h5>
         Contact details <br> <br>
