--- a/html/Group and Jumuias.html
+++ b/html/Group and Jumuias.html
@@ -3,7 +3,7 @@
 
 <head>
     <title> St. Joseph Mukasa Catholic Church Kahawa West</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body class="groups">
@@ -16,7 +16,7 @@
         <li><a href="Group and Jumuias.html">Groups and Jumuias</a> </li>
     </ul>
     <h1> St. Joseph Mukasa Catholic Church Kahawa West</h1>
-    <img src="subukia4.jpg" alt="Tuthu" width="100%" height="500px">
+    <img src="../images/subukia4.jpg" alt="Tuthu" width="100%" height="500px">
     <div class="p1">
         <p>
             After one year of the mandatory Adult Catechism in 2016/2017, and upon reception of <br>
@@ -39,8 +39,8 @@
         <u><b>
                 <h5>Pontificial Missionary Childhood (P.M.C)</u></b></h5><br><br>
     </div>
-    <div class="imagepmc">
-        <img src="goreti.jpeg" alt="Maria">
+    <div class="../images/imagepmc">
+        <img src="../images/goreti.jpeg" alt="Maria">
         <p><b> Maria Goretti P.M.C Patron Saint</b></p><br><br>
     </div> <br>
     <p class="pp2">
@@ -60,8 +60,8 @@
                     <h5> Missionary Youth Movement (M.Y.M)</h5>
                 </b></u> <br> <br><br>
         </div>
-        <div class="imagemym1">
-            <img src="mym1.png" alt="MYM">
+        <div class="../images/imagemym1">
+            <img src="../images/mym1.png" alt="MYM">
             <p><b> M.Y.M Logo</b></p><br><br><br>
         </div>
         <div>
@@ -83,7 +83,7 @@
             <h5><b><u>Youth Serving Christ (Y.S.C)</b> </u></h5><br> <br>
         </div>
         <div class="imageyouth">
-            <img src="youthsaint.jpeg" alt="Youth saint">
+            <img src="../images/youthsaint.jpeg" alt="Youth saint">
             <p><b>Youth Patron Saint</b> </p><br><br><br>
         </div>
         <div>
@@ -102,7 +102,7 @@
     </p>
     <p>
         <div class="imageyca">
-            <img src="yca.jpeg" alt="YCA">
+            <img src="../images/yca.jpeg" alt="YCA">
             <p><b> Y.C.A logo</b></p><br>
         </div><br><br>
         <div>
@@ -122,7 +122,7 @@
     </p>
     <p>
         <div class="imagecma1">
-            <img src="cma1.jpeg" alt="CMA">
+            <img src="../images/cma1.jpeg" alt="CMA">
             <p><b>C.M.A Logo</b> </p><br>
         </div>
     </p>
@@ -142,7 +142,7 @@
     </p>
     <p>
         <div class="imagecwa">
-            <img src="cwa.jpeg" alt="CWA">
+            <img src="../images/cwa.jpeg" alt="CWA">
             <p><b> St.Monicah C.W.A Patron Saint</b> </p><br><br>
         </div>
     </p>
