--- a/html/Home.html
+++ b/html/Home.html
@@ -3,7 +3,7 @@
 
 <head>
     <title> St. Joseph Mukasa Catholic Church Kahawa West</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body class="home">
@@ -20,7 +20,7 @@
     </h1>
     </div>
     <div class="imagehome">
-        <img src="church.jpg" alt="Front view" width="100%" height="700px">
+        <img src="../images/church.jpg" alt="Front view" width="100%" height="700px">
     </div><br><br><br><br>
     <div class="m1">
         <p>
@@ -40,7 +40,7 @@
         <tr>
             <td>
                 <div class="imagemuragu1">
-                    <img src="muragu1.jpg" alt="Welcome" width="500px" height="400px">
+                    <img src="../images/muragu1.jpg" alt="Welcome" width="500px" height="400px">
                     <p> Fr. John Muragu</p>
                     <p> Fr. Incharge K/West Parish</p>
                 </div>
