--- a/html/News.html
+++ b/html/News.html
@@ -3,7 +3,7 @@
 
 <head>
     <title> St. Joseph Mukasa Catholic Church Kahawa West</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body class="news">
@@ -16,7 +16,7 @@
         <li><a href="Group and Jumuias.html">Groups and Jumuias</a> </li>
     </ul>
     <h1> St. Joseph Mukasa Catholic Church Kahawa West</h1>
-    <img src="subukia4.jpg" alt="Tuthu" width="100%" height="500px">
+    <img src="../images/subukia4.jpg" alt="Tuthu" width="100%" height="500px">
     <p>
         <h5> <u>October the month of the Rosary</u><span> <button onclick="Explore();">Read more</button> </span> </h5>
     </p>
@@ -55,7 +55,7 @@
             Vigil Friday 4th October 2019
         </div>
         <div class="imagewaumini">
-            <img src="waumini.jpeg " alt="waumini" width="400px" height="250px">
+            <img src="../images/waumini.jpeg " alt="waumini" width="400px" height="250px">
             <p><b> Christians at a past event </b></p>
         </div><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     </p>
