--- a/html/Pastrol Structure.html
+++ b/html/Pastrol Structure.html
@@ -3,7 +3,7 @@
 
 <head>
     <title> St. Joseph Mukasa Catholic Church Kahawa West</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 
 <body class="pastrol">
@@ -16,7 +16,7 @@
         <li><a href="Group and Jumuias.html">Groups and Jumuias</a> </li>
     </ul>
     <h1> St. Joseph Mukasa Catholic Church Kahawa West</h1>
-    <img src="subukia4.jpg" alt="Tuthu" width="100%" height="500px">
+    <img src="../images/subukia4.jpg" alt="Tuthu" width="100%" height="500px">
     <div class="p1">
         <p>
             As Christ's vicar, each bishop has the pastoral care of the <br> particular Church entrusted to him, <br>
